clusters/homelab/infrastructure/monitoring/traefik-dashboard/ingress/ingress-traefik-private-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-private-dashboard
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-private
spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`traefik-private.flowerhead.dev`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: monitoring
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: monitoring-tls
